Auto play and fix a few issues on mobile

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -3,8 +3,12 @@
     height: 100%;
 }
 
-body {
+html, body {
     overflow: hidden;
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    position: fixed;
 }
 
 .hidden {
